--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Ãtul's Personal Site</title>
+<link rel="stylesheet" href="Ext CSS/styles.css">
 </head>
 
-<body>
+<body >
 
-  <table>
-
-  </table>
+  <table cellspacing="20" >
     <tr>
       <td> <img src="atul.jpg" alt="syntax"></td>
       <td>
@@ -21,7 +20,7 @@
     </tr>
   </table>
 
-  <hr size="1" color="red">
+  <hr >
 
   <p>I'm a sophomore at <a href="https://www.nitrkl.ac.in/" target="_blank">
       <strong>NIT Rourkela</strong></a>, having Industrial design branch. I got
@@ -96,7 +95,7 @@
       <td>cricket </td>
       <td>⭐⭐⭐⭐</td>
       <td>Football </td>
-      <td>⭐⭐⭐</td>
+      <td>⭐⭐</td>
     </tr>
     <tr>
       <td>swimming </td>
@@ -111,7 +110,7 @@
       <td>⭐⭐⭐</td>
     </tr>
 </table>
-
+</body>
 
 
 
