--- a/contact.html
+++ b/contact.html
@@ -3,118 +3,31 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ãtul's Personal Site</title>
+  <title>Contact details</title>
 <link rel="stylesheet" href="Ext CSS/styles.css">
 </head>
 
-<body >
+<body>
+  <h2>My Contact Details</h2>
+  <p>Address: Near daily market, Jharsuguda, Odisha-768201, India.</p>
+  <p>Mob no.: xxxxxx2064</p>
+  <p>email add.: akr2000@gmail.com</p>
+  <form class="" action="mailto:anujkumarrajak.2004@gmail.com" method="post">
+    <label>Your Name:</label>
+    <input type="text" name="" value=""><br>
+      <label>Email</label>
+    <input type="email" name="" value="">
+    <!--<input type="submit" name="">
+    <br>
 
-  <table cellspacing="20" >
-    <tr>
-      <td> <img src="atul.jpg" alt="syntax"></td>
-      <td>
-        <h1>Atul Kumar Rajak</h1>
-        <p><em>A sophomore at <strong>NIT Rourkela</strong></em></p>
-        <p> <em>Industrial design</em> branch(2020-2024) </p>
-      </td>
-    </tr>
-  </table>
+    <input type="password" name="" value="">-->
+    <br>
+    <label>Your Message</label><br>
+    <textarea name="name" rows="10" cols="60"></textarea>
+    <input type="submit" name="" >
 
-  <hr >
+  </form>
 
-  <p>I'm a sophomore at <a href="https://www.nitrkl.ac.in/" target="_blank">
-      <strong>NIT Rourkela</strong></a>, having Industrial design branch. I got
-    admitted in this prestigious college in year 2020 through <a href="https://josaa.nic.in/WebInfo/Page/Page?PageId=1&LangId=P" target="_blank"><em>JOSSA counselling</em></a>.
-    My classes started from 3rd December 2020 in virtual mode.Even next year(2021) all the classes and exams went online. Gradually I got promoted to 2nd year and my classes for 3rd semester started in august 2021 through online mode. It's December
-    2021, our 3rd semester is over but still we are hoping for our college to reopen next year(2022).
-  </p>
-  <h3><strong>Books and novels preferred</strong></h3>
-  <ul>
-    <li> <em> <a href="https://www.amazon.in/Books-H-C-Verma/s?rh=n%3A976389031%2Cp_27%3AH.C.+Verma" target="_blank"> HC Verma</em></a> </li>
-    <li> <em><a href="https://www.amazon.in/Maths-RD-Sharma-2019-2020-Session/dp/B07VF7QNKW" target="_blank"> RD Sharma </em> </a></li>
-    <li> <em> <a href="https://www.amazon.in/Lord-Rings-J-R-Tolkien/dp/0618645616" target="_blank">The Lord of the Rings </em></a> </li>
-    <li> <em> <a href="https://www.amazon.in/Power-Your-Subconscious-Mind-Success/dp/8172345666/ref=asc_df_8172345666/?tag=googleshopdes-21&linkCode=df0&hvadid=396987293436&hvpos=&hvnetw=g&hvrand=12038330056605487664&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9050503&hvtargid=pla-318314909506&psc=1&ext_vrnc=hi" target="_blank">The Power of Your Subconscious Mind</a> </em> </li>
-    <li> <em> <a href="https://www.amazon.in/Books-Sl-Arora/s?rh=n%3A976389031%2Cp_27%3ASl+Arora" target="_blank"> SL Arora</a> </em>  </li>
-  </ul>
-  <br>
-  <hr>
-
-<a href="contact.html" target="_blank">Contact details</a>
-
-  <hr>
-  <h3>Acadmics</h3>
-  <table border="1">
-    <th>Year</th>
-    <th>Institute</th>
-    <tr>
-      <td>2004-2017</td>
-      <td>St. Thomas English School, Jsg</td>
-    </tr>
-    <tr>
-      <td>2017-2019</td>
-      <td>DAV Public School, Jsg</td>
-    </tr>
-    <tr>
-      <td>2019-2020</td>
-      <td>Resonance, Bhubaneswar</td>
-    </tr>
-    <tr>
-      <td>2020-Present</td>
-      <td>NIT Rourkela, Odisha</td>
-    </tr>
-  </table>
-  <br>
-  <hr>
-  <h3>Skills</h3>
-  <table border="1">
-    <tr>
-      <td>CSS </td>
-      <td>⭐</td>
-      <td>Html </td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Java</td>
-      <td> ⭐⭐⭐</td>
-      <td>JavaScript </td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>C </td>
-      <td>⭐⭐⭐</td>
-      <td>C++ </td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>painting </td>
-      <td>⭐⭐⭐</td>
-      <td>Sketching </td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>cricket </td>
-      <td>⭐⭐⭐⭐</td>
-      <td>Football </td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>swimming </td>
-      <td></td>
-      <td>running </td>
-      <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>coder </td>
-      <td>⭐⭐⭐</td>
-      <td>writer </td>
-      <td>⭐⭐⭐</td>
-    </tr>
-</table>
 </body>
-
-
-
-
-
 
 </html>
